@@ -4,22 +4,34 @@ import java.io.IOException;
 import java.io.Reader;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Collections;
 import java.util.List;
-import java.util.Objects;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
+import io.github.danthe1st.httpsintercept.rules.PostForwardRule;
 import io.github.danthe1st.httpsintercept.rules.PreForwardRule;
 
 public record Config(
 		HostMatcherConfig ignoredHosts,
-		List<PreForwardRule> preForwardRules
+		List<PreForwardRule> preForwardRules,
+		List<PostForwardRule> postForwardRules
 ) {
 	
-	public Config(HostMatcherConfig ignoredHosts, List<PreForwardRule> preForwardRules) {
-		Objects.requireNonNull(ignoredHosts);
+	public Config(HostMatcherConfig ignoredHosts, List<PreForwardRule> preForwardRules, List<PostForwardRule> postForwardRules) {
+		if(ignoredHosts == null){
+			ignoredHosts = new HostMatcherConfig(null, null, null);
+		}
 		this.ignoredHosts = ignoredHosts;
-		this.preForwardRules = List.copyOf(preForwardRules);
+		this.preForwardRules = emptyIfNull(preForwardRules);
+		this.postForwardRules = emptyIfNull(postForwardRules);
+	}
+	
+	private <T> List<T> emptyIfNull(List<T> preForwardRules) {
+		if(preForwardRules == null){
+			return Collections.emptyList();
+		}
+		return List.copyOf(preForwardRules);
 	}
 	
 	public static Config load(Path path) throws IOException {
